src/kube/dashboard/namespace.yml
---
kind: "Namespace"
apiVersion: "v1"
metadata:
  name: "kubernetes-dashboard"
  labels:
    name: "kubernetes-dashboard"
