src/kube/dashboard/ingress.yml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  annotations:
    alb.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: "dashboard-ingress"
  namespace: "kubernetes-dashboard"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "kube-dash.localdomain"
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: "kubernetes-dashboard-kong-proxy"
                port:
                  name: https
